# ocr-client

./: .gitignore  Cargo.toml  build.rs  output.txt
src/: img.rs  lib.rs
src/err/: mod.rs
src/pdf/: doc.rs  mod.rs
src/server/: docling.rs  invoice.rs  mod.rs
tests/: invoice.rs
