[package]
name = "ocr-client"
description = "Optical Character Recognition Client that works in conjunction with OCR-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = "0.4"
crossbeam = "0.8"
either = "1"
image = "0.25"
pdf = {package = "pdfium-render", version = "0.8"}
regex = "1"
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = "1"
url = "2"



[dev-dependencies]
tokio = {version = "*", features = ["full"]}
